tests/sksl/errors/StaticSwitchTest.glsl
### Compilation failed:

error: 2: static switch has non-static test
1 error
